--- a/style/index.css
+++ b/style/index.css
@@ -3,15 +3,20 @@
   margin: 0;
   padding: 0;
 }
-* body {
+
+html {
+  height: 100%;
+}
+html body {
   height: 100%;
   background-color: #9C4240;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
-* body .card {
+
+.card {
   font-family: "Alegreya Sans", sans-serif;
   background-color: #F2EDDB;
   width: 50%;
@@ -20,54 +25,65 @@
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.87);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.87);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.87);
-  padding: 20px;
-}
-* body .card h1 {
-  color: #9C4240;
-  text-align: center;
-  margin: 10px;
-}
-* body .card article {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
 }
-* body .card article h2 {
+.card__title {
+  font-size: 3rem;
+  color: #9C4240;
+  text-align: center;
+  margin: 10px;
+}
+.card__maintenance {
+  display: flex;
+  margin: 20px;
+  align-items: center;
+  text-align: center;
+}
+.card__maintenance h2 {
   color: #9C4240;
 }
-* body .card article h2 a {
-  color: black;
-}
-* body .card article .maintenance {
-  display: flex;
-  margin: 100px;
-  align-items: center;
-}
-* body .card article .maintenance img {
+.card__maintenance img {
   width: 50px;
   height: 50px;
   margin: 10px;
 }
-* body header {
-  height: 25vh;
+.card__network {
+  color: #9C4240;
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 10px;
 }
-* body footer {
-  background-color: #9C4240;
-  width: 100%;
-  height: 25vh;
+.card__network a {
+  color: black;
+}
+.card__contact {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  background-color: #e4dab6;
+  border: #9C4240 2px;
+  border-radius: 100%;
+  padding: 25px;
+  border-style: double;
+}
+.card__contact__title {
+  color: #9C4240;
+  margin-bottom: 5px;
+  align-self: center;
+}
+.card__contact p {
+  margin: 2px;
+  color: #9C4240;
 }
 
 @media screen and (max-width: 768px) {
   .card {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
+    width: 90%;
+    height: 90%;
     padding: 50px;
-  }
-  .card .maintenance {
-    margin: 20px;
   }
 }
 
