--- a/style/index.scss
+++ b/style/index.scss
@@ -1,89 +1,111 @@
 $primary-color: #9C4240;
 $secondary-color: #F2EDDB;
 
+@mixin margin {
+    margin: 10px;
+}
 
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+html{
+    height: 100%;
 
     body{
         height: 100%;
         background-color: $primary-color;
         display: flex;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
+    }
 
-        .card{
-            font-family: 'Alegreya Sans', sans-serif;
-            background-color: $secondary-color;
-            width: 50%;
-            height: 50vh;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
-            -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
-            -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
-            padding: 20px;
+}
+.card{
+    font-family: 'Alegreya Sans', sans-serif;
+    background-color: $secondary-color;
+    width: 50%;
+    height: 50vh;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-            h1{
-                color: $primary-color;
-                text-align: center;
-                margin: 10px;
-            }
+    &__title{
+        font-size: 3rem;
+        color: $primary-color;
+        text-align: center;
+        @include margin()
+    }
 
-            article{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                margin-bottom: 10px;
+    &__maintenance{
+        display: flex;
+        margin: 20px;
+        align-items: center;
+        text-align: center;
 
-                h2{
-                    color: $primary-color;
-
-                    a{
-                        color: black;
-                    }
-                }
-
-                
-                .maintenance{
-                    display: flex;
-                    margin: 100px;
-                    align-items: center;
-
-                    img{
-                        width: 50px;
-                        height: 50px;
-                        margin: 10px;
-                    }
-                }
-            }
+        h2{
+            color: $primary-color;
         }
 
-        header{
-            height: 25vh;
+        img{
+            width: 50px;
+            height: 50px;
+            margin: 10px;
         }
-        
-        footer{
-            background-color: $primary-color;
-            width: 100%;
-            height: 25vh;
+    }   
+
+    &__network{
+        color: $primary-color;
+        font-size: 1.5rem;
+        text-align: center;
+        @include margin();
+
+        a{
+            color: black;
         }
     }
+
+    &__contact{
+        @include margin();
+        display: flex;
+        flex-direction: column;
+        background-color: darken($secondary-color, 10%);
+        border: $primary-color 2px;
+        border-radius: 100%;
+        padding: 25px;
+        border-style: double;
+
+        &__title{
+            color: $primary-color;
+            margin-bottom: 5px;
+            align-self: center;
+
+        }
+       p{
+        margin: 2px;
+        color: $primary-color;
+       }
+
+
+    }
+
 }
 
-@media screen and (max-width: 768px) {
-    .card{
-        width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding: 50px;
 
-        .maintenance{
-            margin: 20px;
-        }
+@media screen and (max-width: 768px) {
+
+    .card{
+        width: 90%;
+        height: 90%;
+        padding: 50px;
     }
- 
+
 }
