--- a/style/index.scss
+++ b/style/index.scss
@@ -92,6 +92,10 @@ html{
        p{
         margin: 2px;
         color: $primary-color;
+
+        .fas{
+            margin-right: 2px;
+        }
        }
 
 
