--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,7 @@ html {
 }
 html body {
   height: 100%;
-  background-color: #9C4240;
+  background-image: url("../images/fruits.jpg");
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -32,7 +32,7 @@ html body {
 }
 .card__title {
   font-size: 3rem;
-  color: #9C4240;
+  color: #753A1F;
   text-align: center;
   margin: 10px;
 }
@@ -43,7 +43,7 @@ html body {
   text-align: center;
 }
 .card__maintenance h2 {
-  color: #9C4240;
+  color: #753A1F;
 }
 .card__maintenance img {
   width: 50px;
@@ -51,32 +51,38 @@ html body {
   margin: 10px;
 }
 .card__network {
-  color: #9C4240;
+  color: #753A1F;
   font-size: 1.5rem;
   text-align: center;
+  font-weight: 500;
   margin: 10px;
 }
 .card__network a {
-  color: black;
+  color: #753A1F;
+}
+.card__network a:hover {
+  font-weight: bold;
 }
 .card__contact {
   margin: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.87);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.87);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: column;
   background-color: #e4dab6;
-  border: #9C4240 2px;
   border-radius: 100%;
   padding: 25px;
-  border-style: double;
 }
 .card__contact__title {
-  color: #9C4240;
+  color: #753A1F;
   margin-bottom: 5px;
   align-self: center;
 }
 .card__contact p {
   margin: 2px;
-  color: #9C4240;
+  color: #753A1F;
+  font-weight: 500;
 }
 .card__contact p .fas {
   margin-right: 2px;
