--- a/style/index.scss
+++ b/style/index.scss
@@ -1,8 +1,14 @@
-$primary-color: #9C4240;
+$primary-color: #753A1F;
 $secondary-color: #F2EDDB;
 
 @mixin margin {
     margin: 10px;
+}
+
+@mixin shadow {
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
 }
 
 *{
@@ -16,7 +22,7 @@ html{
 
     body{
         height: 100%;
-        background-color: $primary-color;
+        background-image: url("../images/fruits.jpg");
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -30,9 +36,7 @@ html{
     width: 50%;
     height: 50vh;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
+    @include shadow();
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,22 +70,26 @@ html{
         color: $primary-color;
         font-size: 1.5rem;
         text-align: center;
+        font-weight: 500;
         @include margin();
 
         a{
-            color: black;
+            color: $primary-color;
+
+            &:hover{
+                font-weight: bold;
+            }
         }
     }
 
     &__contact{
         @include margin();
+        @include shadow();
         display: flex;
         flex-direction: column;
         background-color: darken($secondary-color, 10%);
-        border: $primary-color 2px;
         border-radius: 100%;
         padding: 25px;
-        border-style: double;
 
         &__title{
             color: $primary-color;
@@ -92,6 +100,7 @@ html{
        p{
         margin: 2px;
         color: $primary-color;
+        font-weight: 500;
 
         .fas{
             margin-right: 2px;
