--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,10 +17,9 @@ html body {
 }
 
 .card {
-  font-family: "Alegreya Sans", sans-serif;
+  font-family: "Kadwa", serif;
   background-color: #F2EDDB;
   width: 50%;
-  height: 50vh;
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.87);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.87);
@@ -35,6 +34,13 @@ html body {
   color: #753A1F;
   text-align: center;
   margin: 10px;
+  margin-bottom: 0px;
+}
+.card__text {
+  color: #753A1F;
+  font-size: 1.4rem;
+  text-align: center;
+  line-height: 2rem;
 }
 .card__maintenance {
   display: flex;
@@ -91,8 +97,7 @@ html body {
 @media screen and (max-width: 768px) {
   .card {
     width: 90%;
-    height: 90%;
-    padding: 50px;
+    overflow-y: scroll;
   }
 }
 
