--- a/sass/pages/workinprogress.scss
+++ b/sass/pages/workinprogress.scss
@@ -1,40 +1,7 @@
-$primary-color: #753A1F;
-$secondary-color: #F2EDDB;
-
-@mixin margin {
-    margin: 10px;
-}
-
-@mixin shadow {
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.87);
-}
-
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html{
-    height: 100%;
-
-    body{
-        height: 100%;
-        background-image: url("../images/fruits.jpg");
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
-
-}
 .card{
-    font-family: 'Alegreya Sans', sans-serif;
+    font-family: 'Kadwa', serif;
     background-color: $secondary-color;
     width: 50%;
-    height: 50vh;
     border-radius: 10px;
     @include shadow();
     display: flex;
@@ -46,7 +13,15 @@ html{
         font-size: 3rem;
         color: $primary-color;
         text-align: center;
-        @include margin()
+        @include margin();
+        margin-bottom: 0px;
+    }
+
+    &__text{
+        color: $primary-color;
+        font-size: 1.4rem;
+        text-align: center;
+        line-height: 2rem;
     }
 
     &__maintenance{
@@ -117,8 +92,7 @@ html{
 
     .card{
         width: 90%;
-        height: 90%;
-        padding: 50px;
+        overflow-y: scroll;
     }
 
 }
